New Depsgraph - Constraint and Drivers not working together when the driver references itself #52255

Closed
opened 2017-08-03 00:03:28 +02:00 by Carlo Andreacchio · 5 comments

System Information
Linux 64bit Ubuntu 17.04 GTX 1080

Blender Version
Broken: b94a433ca3

Short description of error
New Depsgraph... Sorry Sergey!
When a object has a driver and a constraint, and the driver references itself, the constraint is no longer evaluated

Exact steps for others to reproduce the error

  1. Open attached blend file in a blender using the new depsgraph
  2. Notice how it is flat
  3. open attached blend file in blender normally (old depsgraph)
  4. notice how it is pointing at the camera

bug.blend

**System Information** Linux 64bit Ubuntu 17.04 GTX 1080 **Blender Version** Broken: b94a433ca3 **Short description of error** New Depsgraph... Sorry Sergey! When a object has a driver and a constraint, and the driver references itself, the constraint is no longer evaluated **Exact steps for others to reproduce the error** 1. Open attached blend file in a blender using the new depsgraph 2. Notice how it is flat 3. open attached blend file in blender normally (old depsgraph) 4. notice how it is pointing at the camera [bug.blend](https://archive.blender.org/developer/F690748/bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Should note, that if the driver is not referencing itself, but referencing another object, it is fine.

Any children are evaluated correctly. just not the main object itself

Should note, that if the driver is not referencing itself, but referencing another object, it is fine. Any children are evaluated correctly. just not the main object itself

This issue was referenced by 90b3dba515

This issue was referenced by 90b3dba5151d1297929ec08baf3800755e9e3494

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52255
No description provided.