Fix T52255: New Depsgraph - Constraint and Drivers not working together when the driver references itself